Logic Fix Reload Page Dark Mode

--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -71,30 +71,6 @@ button {
   background-color: #8993D1;
 }
 
-@media (min-width: 760px) {
-  #bouncing-button { 
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-
-  #see-more-projects {
-    margin-right: 20px;
-    align-self: center;
-  }
-
-  #see-more-projects-button {
-    /* margin-right: 20px;
-    padding: 50px; */
-    border: 1px solid rgb(114, 114, 114);
-    width: 200px;
-    padding: 10px;
-    margin-right: 15px;
-    /* white-space: nowrap; */
-  }
-
-  
-}
-
 /* #back-to-top {
   position: fixed;
   right: 5%;
@@ -148,6 +124,26 @@ button {
 }
 
 @media (min-width: 760px) {
+  #bouncing-button { 
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
+
+  #see-more-projects {
+    margin-right: 20px;
+    align-self: center;
+  }
+
+  #see-more-projects-button {
+    /* margin-right: 20px;
+    padding: 50px; */
+    border: 1px solid rgb(114, 114, 114);
+    width: 200px;
+    padding: 10px;
+    margin-right: 15px;
+    /* white-space: nowrap; */
+  }
+
   .close-modal {
     top: 10px;
     right: 30px;
